--- a/MahasiswaAppAbika/app/src/main/res/layout/activity_register.xml
+++ b/MahasiswaAppAbika/app/src/main/res/layout/activity_register.xml
@@ -48,7 +48,7 @@
             android:layout_marginStart="24dp"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="24dp"
-            android:background="@drawable/bg_text"
+            android:background="@drawable/bg_text_1"
             android:hint="Masukkan Username"
             android:maxLines="1"
             android:padding="16dp" />
@@ -60,7 +60,7 @@
             android:layout_marginStart="24dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="24dp"
-            android:background="@drawable/bg_text"
+            android:background="@drawable/bg_text_1"
             android:hint="Masukkan Email"
             android:inputType="textEmailAddress"
             android:maxLines="1"
@@ -73,7 +73,7 @@
             android:layout_marginStart="24dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="24dp"
-            android:background="@drawable/bg_text"
+            android:background="@drawable/bg_text_1"
             android:hint="Masukkan Password"
             android:inputType="textPassword"
             android:maxLines="1"
@@ -86,7 +86,7 @@
             android:layout_marginStart="24dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="24dp"
-            android:background="@drawable/bg_text"
+            android:background="@drawable/bg_text_1"
             android:hint="Konfirmasi Password"
             android:inputType="textPassword"
             android:maxLines="1"
