--- a/MahasiswaAppAbika/app/src/main/res/layout/activity_profile.xml
+++ b/MahasiswaAppAbika/app/src/main/res/layout/activity_profile.xml
@@ -7,22 +7,29 @@
     tools:context=".ui.ProfileActivity">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/flexible.example.toolbar"
+        android:id="@+id/tbProfile"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@null"
-        app:layout_collapseMode="pin"
-        tools:ignore="MissingConstraints" />
-
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_marginTop="115dp"
+        android:layout_height="wrap_content"
+        android:background="@color/softPurple"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        android:title="Profile"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_person" />
+        app:navigationIcon="@drawable/ic_back" />
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/imageView3"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="62dp"
+        app:civ_border_width="2dp"
+        app:civ_border_color="@color/softPink"
+        android:src="@drawable/ic_person"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tbProfile" />
 
     <TextView
         android:id="@+id/tvProfileNama"
