--- a/MahasiswaAppAbika/app/src/main/res/layout/activity_login.xml
+++ b/MahasiswaAppAbika/app/src/main/res/layout/activity_login.xml
@@ -52,7 +52,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginEnd="32dp"
         android:ems="10"
-        android:hint="Masukkan Email"
+        android:hint="Masukkan Password"
         android:inputType="textPassword"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etEmail" />
