Finish all task

--- a/MahasiswaAppAbika/app/src/main/res/layout/activity_profile.xml
+++ b/MahasiswaAppAbika/app/src/main/res/layout/activity_profile.xml
@@ -25,7 +25,7 @@
         android:layout_height="150dp"
         android:layout_marginTop="62dp"
         app:civ_border_width="2dp"
-        app:civ_border_color="@color/softPink"
+        app:civ_border_color="@color/softGrey"
         android:src="@drawable/ic_person"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +35,7 @@
         android:id="@+id/tvProfileNama"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -46,7 +46,6 @@
         android:id="@+id/tvProfileEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
