--- a/MahasiswaAppAbika/app/src/main/res/layout/activity_action.xml
+++ b/MahasiswaAppAbika/app/src/main/res/layout/activity_action.xml
@@ -35,7 +35,8 @@
             android:inputType="number"
             android:maxLength="10"
             android:maxLines="1"
-            android:padding="16dp" />
+            android:padding="16dp"
+            android:singleLine="true" />
 
         <EditText
             android:id="@+id/etNama"
@@ -45,7 +46,8 @@
             android:background="@drawable/bg_text_2"
             android:hint="Masukkan Nama"
             android:maxLines="1"
-            android:padding="16dp" />
+            android:padding="16dp"
+            android:singleLine="true" />
 
         <EditText
             android:id="@+id/etNoHp"
@@ -57,7 +59,8 @@
             android:inputType="number"
             android:maxLength="12"
             android:maxLines="1"
-            android:padding="16dp" />
+            android:padding="16dp"
+            android:singleLine="true" />
 
         <EditText
             android:id="@+id/etJurusan"
@@ -67,7 +70,8 @@
             android:background="@drawable/bg_text_2"
             android:hint="Masukkan Jurusan"
             android:maxLines="1"
-            android:padding="16dp" />
+            android:padding="16dp"
+            android:singleLine="true" />
 
         <EditText
             android:id="@+id/etSemester"
@@ -79,7 +83,8 @@
             android:inputType="number"
             android:maxLength="2"
             android:maxLines="1"
-            android:padding="16dp" />
+            android:padding="16dp"
+            android:singleLine="true" />
 
         <EditText
             android:id="@+id/etAlamat"
@@ -89,7 +94,8 @@
             android:background="@drawable/bg_text_2"
             android:hint="Masukkan Alamat"
             android:maxLines="1"
-            android:padding="16dp" />
+            android:padding="16dp"
+            android:singleLine="true" />
 
         <LinearLayout
             android:layout_width="match_parent"
