--- a/MahasiswaAppAbika/app/src/main/res/layout/activity_main.xml
+++ b/MahasiswaAppAbika/app/src/main/res/layout/activity_main.xml
@@ -55,7 +55,7 @@
                     <TextView
                         android:id="@+id/tvMainUser"
                         android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_marginStart="25dp"
                         android:text="Abikayusri"
                         android:textColor="@android:color/black"
@@ -77,12 +77,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="12dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginEnd="16dp"
         android:background="@drawable/bg_rounded_top"
         android:orientation="vertical"
-        android:scrollbars="none"
         app:behavior_overlapTop="100dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
@@ -104,8 +103,10 @@
             android:layout_height="match_parent"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
+            android:layout_marginBottom="30dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:listitem="@layout/list_item" />
+            tools:listitem="@layout/list_item"
+            />
     </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
