--- a/MahasiswaAppAbika/app/src/main/res/layout/activity_register.xml
+++ b/MahasiswaAppAbika/app/src/main/res/layout/activity_register.xml
@@ -51,7 +51,8 @@
             android:background="@drawable/bg_text_1"
             android:hint="Masukkan Username"
             android:maxLines="1"
-            android:padding="16dp" />
+            android:padding="16dp"
+            android:singleLine="true" />
 
         <EditText
             android:id="@+id/etRegisEmail"
@@ -64,7 +65,8 @@
             android:hint="Masukkan Email"
             android:inputType="textEmailAddress"
             android:maxLines="1"
-            android:padding="16dp" />
+            android:padding="16dp"
+            android:singleLine="true" />
 
         <EditText
             android:id="@+id/etRegisPassword"
@@ -77,7 +79,8 @@
             android:hint="Masukkan Password"
             android:inputType="textPassword"
             android:maxLines="1"
-            android:padding="16dp" />
+            android:padding="16dp"
+            android:singleLine="true" />
 
         <EditText
             android:id="@+id/etRegisConPassword"
@@ -90,7 +93,8 @@
             android:hint="Konfirmasi Password"
             android:inputType="textPassword"
             android:maxLines="1"
-            android:padding="16dp" />
+            android:padding="16dp"
+            android:singleLine="true" />
 
         <Button
             android:id="@+id/btnRegister"
@@ -100,6 +104,7 @@
             android:layout_marginTop="32dp"
             android:layout_marginEnd="24dp"
             android:background="@drawable/bg_button_register"
+            android:singleLine="true"
             android:text="Create Account"
             android:textColor="@android:color/white"
             android:textSize="16sp"
