--- a/MahasiswaAppAbika/app/src/main/res/values/colors.xml
+++ b/MahasiswaAppAbika/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="softRed">#FCA19E</color>
     <color name="softPink">#FCE8FD</color>
     <color name="darkPink">#EC5CA5</color>
+    <color name="softGrey">#D9D9D9</color>
 
     <color name="softOrange">#FFEED6</color>
     <color name="softGreen">#D1FFD3</color>
